# runtime-supervisor

./: .env.example  .env.prod.example  .gitignore  .vercelignore  CLAUDE.md  Caddyfile  DEPLOY.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  quickstart.sh
services/supervisor_api/: Dockerfile  pyproject.toml
services/supervisor_api/alembic/: env.py
services/supervisor_api/alembic/versions/: 0001_init.py  0002_integrations.py  0003_threats.py  0004_action_proxy.py  0005_policies.py  0006_webhook_retry.py  0007_admin_events.py  0008_tenants_users.py  0009_shadow_and_latency.py  0010_review_priority.py  0011_row_tenant_id.py  0012_billing_and_magic_link.py  0013_scans.py  0014_action_client_id.py  0015_magic_link_metadata.py  0016_github_installations.py
services/supervisor_api/src/supervisor_api/: alerting.py  audit.py  auth.py  bootstrap.py  config.py  db.py  email.py  evidence.py  execution.py  github_api.py  github_pr_comment.py  main.py  models.py  observability.py  ratelimit.py  registry.py  retry_worker.py  schemas.py  seed.py  storage.py  telemetry.py  webhooks.py
services/supervisor_api/src/supervisor_api/engines/: decision.py  policy.py  risk.py
services/supervisor_api/src/supervisor_api/routes/: actions.py  admin.py  auth_magic.py  billing.py  catalog.py  github_app.py  integrations.py  metrics.py  policies.py  public_signup.py  repos.py  review.py  scans.py  (+4 more)
services/supervisor_api/tests/: conftest.py  test_github_app.py  test_public_signup.py
services/supervisor_api/tests/contracts/: test_action_types.py  test_metrics.py  test_recent_actions.py  test_schemas.py  test_shadow.py  test_threats_api.py
services/supervisor_api/tests/dryrun/: test_dry_run.py
services/supervisor_api/tests/e2e/: test_payment_flow.py  test_refund_flow.py
services/supervisor_api/tests/integration/: test_action_proxy.py  test_bootstrap.py  test_evidence_export.py  test_integrations_api.py  test_phase_s.py  test_phase_tx.py  test_phase_v.py  test_phase_w.py  test_policies.py  test_policy_diff.py  test_policy_replay.py  test_policy_templates.py  test_public_demo.py  test_tenant_isolation.py  test_threats_flow.py  test_webhook_retry.py  test_webhooks.py
services/supervisor_api/tests/unit/: test_auth.py  test_evidence_hashchain.py  test_policy_engine.py  test_risk_engine.py  test_threat_detectors.py  test_threat_pipeline.py
(+113 files in other folders)
