[project]
name = "supervisor-api"
version = "0.1.0"
description = "Supervisor API for agentic internal controls"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "asteval>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "python-json-logger>=2.0",
    "supervisor-discover",
    "stripe>=8.0",
    "resend>=2.0",
    # GitHub App: RS256 JWT for app auth + RSA key parsing.
    "pyjwt[crypto]>=2.9",
]

[tool.uv.sources]
supervisor-discover = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
